[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/scene_scripts/scn_card_battle.gd" type="Script" id=1]
[ext_resource path="res://objects/game_board.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/game_hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/game_deck.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/card_selector.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/themes/theme_hud_main.tres" type="Theme" id=6]
[ext_resource path="res://assets/themes/theme_ingame_board_score.tres" type="Theme" id=7]
[ext_resource path="res://assets/themes/HTOWERT.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://assets/themes/fnt_hud_02.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/themes/theme_hud_hints.tres" type="Theme" id=10]
[ext_resource path="res://assets/sprites/portraits/portrait_back.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/portraits/portrait_frame.png" type="Texture" id=12]
[ext_resource path="res://assets/themes/fnt_title.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/sounds/battle_horn.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/ping.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/coin_drop.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/music/mus_battle.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1080 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portrait:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 950, -630 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portrait:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( -2 ),
"update": 0,
"values": [ Vector2( 0, 1080 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Portrait/Name:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "portrait_introduce"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Portrait:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "portrait_to_corner"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Portrait:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 950, 450 ), Vector2( 1770, 220 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Portrait:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0.6, 0.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portrait/Name:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "scene_slide_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 1080 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, -1080 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Portrait:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 950, -630 ), Vector2( 950, 450 ) ]
}

[node name="ScnCardBattle" type="Node2D"]
position = Vector2( 0, 1080 )
script = ExtResource( 1 )

[node name="GameBoard" parent="." instance=ExtResource( 2 )]
position = Vector2( 290, 40 )
scale = Vector2( 0.8, 0.8 )

[node name="PlayerScore" type="Label" parent="."]
margin_left = 1410.0
margin_top = 469.0
margin_right = 1610.0
margin_bottom = 570.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 7 )
text = "0"
align = 1
valign = 1

[node name="SfxPing" type="AudioStreamPlayer2D" parent="PlayerScore"]
position = Vector2( 100, 50 )
stream = ExtResource( 15 )
bus = "Sfx"

[node name="EnemyScore" type="Label" parent="."]
margin_left = 290.0
margin_top = 141.0
margin_right = 490.0
margin_bottom = 242.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 7 )
text = "0"
align = 1
valign = 1

[node name="SfxPing" type="AudioStreamPlayer2D" parent="EnemyScore"]
position = Vector2( 100, 50 )
stream = ExtResource( 15 )
bus = "Sfx"

[node name="HintBox" type="PanelContainer" parent="."]
margin_left = 30.0
margin_top = 370.0
margin_right = 480.0
margin_bottom = 670.0
theme = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="HintBox"]
margin_left = 20.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 290.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="ButtonEndTurn" type="Button" parent="."]
margin_left = 1640.0
margin_top = 450.0
margin_right = 1892.0
margin_bottom = 600.0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
text = "Charge!"

[node name="GameDeck" parent="." instance=ExtResource( 4 )]
position = Vector2( 1750, 880 )
scale = Vector2( 0.8, 0.8 )

[node name="BoardCards" type="Node2D" parent="."]

[node name="LabelNextCard" type="Label" parent="."]
margin_left = 1360.0
margin_top = 10.0
margin_right = 1660.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 70 )
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 9 )
text = "Next:"
align = 1

[node name="Position2D" type="Position2D" parent="LabelNextCard"]
position = Vector2( 150, 200 )

[node name="Portrait" type="Node2D" parent="."]
position = Vector2( 950, -630 )
scale = Vector2( 1e-05, 1e-05 )

[node name="Back" type="Sprite" parent="Portrait"]
modulate = Color( 1, 0.9, 0.7, 1 )
texture = ExtResource( 11 )

[node name="Head" type="Sprite" parent="Portrait"]

[node name="Frame" type="Sprite" parent="Portrait"]
texture = ExtResource( 12 )

[node name="Name" type="Label" parent="Portrait"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = 270.0
margin_right = 500.0
margin_bottom = 335.0
rect_min_size = Vector2( 2000, 0 )
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1

[node name="GameHand" parent="." instance=ExtResource( 3 )]
position = Vector2( 200, 880 )
scale = Vector2( 0.9, 0.9 )

[node name="CardSelector" parent="." instance=ExtResource( 5 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
offset = Vector2( 0, -1080 )
current = true

[node name="DebugGamePhase" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 302.0
margin_bottom = 75.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "gamephase"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/portrait_introduce = SubResource( 4 )
anims/portrait_to_corner = SubResource( 5 )
anims/scene_slide_in = SubResource( 2 )

[node name="SfxBattleHorn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.0
bus = "Sfx"

[node name="SfxBuyCard" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1700, 870 )
stream = ExtResource( 16 )
bus = "Sfx"

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 17 )
autoplay = true
bus = "Music"

[connection signal="next_phase_triggered" from="." to="." method="_on_next_phase_triggered"]
[connection signal="player_lost" from="." to="." method="_on_ScnCardBattle_player_lost"]
[connection signal="player_won" from="." to="." method="_on_ScnCardBattle_player_won"]
[connection signal="pressed" from="ButtonEndTurn" to="." method="_on_next_phase_triggered" binds= [ 1 ]]
[connection signal="clicked" from="GameDeck" to="." method="_on_GameDeck_clicked"]
[connection signal="card_selected" from="CardSelector" to="." method="_on_CardSelector_card_selected"]
[connection signal="none_selected" from="CardSelector" to="." method="_on_CardSelector_none_selected"]
